--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -3,13 +3,32 @@
 <head>
     <meta charset="UTF-8">
     
-    <title>Document</title>
+    <title> Document </title>
+    <style>.bg-black {
+        background-color: #212121;
+        color: #fff;
+
+    }
+    </style>
+    </head>
+
 </head>
-<body>  
-    <div class = "bg-black">
+    </head>
+</head>
+<body  class = "bg-black"> 
+    <div >
 
         <h1 id = "title" class = "heading"> Dom learning on chai aur code </h1>
+        <h2>   lrem ipsum dolor site amet</h2>
+        <h2>   lrem ipsum dolor site amet</h2>
+        <h2>   lrem ipsum dolor site amet</h2>
+
         <p> lorem ipsum dolor sit amet.</p>
-    </div>    
+        <ul>
+            <li> one</li>
+            <li> two</li>
+            <li> three</li>
+        </ul>
+    </div>                                                                     
 </body>
-</html>
+</html>                                                                                  
